# titlechain

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  go.work  go.work.sum  package-lock.json  package.json  sqlc.yaml  vitest.config.ts
.github/workflows/: docker.yml  migrations.yml  quality.yml
app/: globals.css  landing-page-content.ts  landing-page.tsx  page.test.tsx
apps/portal/: Dockerfile  next.config.ts  package.json  vitest.config.ts
crates/deeds-normalizer/: Cargo.toml
crates/entity-resolution/: Cargo.toml
crates/pipeline-core/: Cargo.toml
crates/storage/: Cargo.toml
db/migrations/: 20260422140000_foundation.sql  20260423100000_phase_1_cases.sql  20260424113000_phase_2_property_projection.sql  20260424123000_add_active_run_constraint.sql  20260425100000_phase_2_source_ingestion_normalization.sql  20260426100000_add_canonical_uniqueness.sql  20260426100000_add_linked_property_id.sql  20260426100000_linked_property_id.sql  20260426100001_canonical_uniqueness.sql  20260426113000_phase_3_decision_engine.sql  20260427100000_phase_4_pilot_customer_workflow.sql
db/queries/: cases.sql  decisioning.sql  ops_jobs.sql  pilot.sql  properties.sql  source_ingestion.sql
infra/docker/: api.Dockerfile  docker-compose.yml  worker.Dockerfile
infra/monitoring/: prometheus.yml
workers/deeds-pipeline/: Cargo.toml
workers/deeds-pipeline/src/: config.rs  db.rs  http.rs  ingestion.rs  main.rs  materialize.rs  normalization.rs  projection.rs  read_model.rs  worker.rs
workers/deeds-pipeline/src/db/: core.rs  jobs.rs  mod.rs  raw.rs  read.rs  stage.rs
(+195 files in other folders)
