[package]
name = "deeds-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
deeds-normalizer = { path = "../../crates/deeds-normalizer" }
entity-resolution = { path = "../../crates/entity-resolution" }
pipeline-core = { path = "../../crates/pipeline-core" }
